# rust-scratch

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  progress.json  rust-toolchain.toml
.claude/commands/: document.md  experiment.md  explain.md  list.md  run.md  stats.md
.claude/skills/rust-practice/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  stats.yml
docs/: book.toml
docs/src/: SUMMARY.md  intro.md
docs/src/concepts/: assoc-vs-generic.md  blanket-coherence.md  borrow-toowned.md  box-heap.md  builder.md  cell-refcell.md  channels.md  closures.md  collections.md  concurrency-models.md  conversions.md  cow.md  custom-errors.md  dispatch.md  drop-ordering.md  error-arch.md  features-cfg.md  generic-bounds.md  hrtb.md  impl-trait.md  iterators.md  lifetimes-depth.md  marker-auto-traits.md  modules.md  mutex-rwlock.md  newtype.md  rayon-parallel.md  rc-arc.md  rc-refcell.md  semver.md  send-sync.md  strings-text.md  testing.md  threads.md  typestate.md
docs/src/meta/: adding-a-note.md  template.md
docs/theme/: custom.css
practice/crates_workspaces/r1_pkg/: Cargo.toml
practice/crates_workspaces/r1_pkg/src/: main.rs
practice/crates_workspaces/r2_libbin/: Cargo.toml
practice/crates_workspaces/r2_libbin/src/: lib.rs  main.rs
practice/testing_lab/: Cargo.toml
practice/testing_lab/src/: lib.rs
practice/testing_lab/tests/: ledger.rs  normalize.rs
practice/testing_lab/tests/common/: mod.rs
scripts/: miri
src/: main.rs
