[package]
name = "rust-scratch"
version = "0.1.0"
edition = "2024"

[dependencies]
# async
tokio        = { version = "1", features = ["full"] }
futures      = "0.3"
async-trait  = "0.1"

# error handling
anyhow       = "1"
thiserror    = "2"

# serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# http
reqwest      = { version = "0.13", features = ["json"] }

# utils
rand         = "0.10"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
